deleted the z-index because of overlay issues

--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -8,7 +8,6 @@
 
 .movies-wrapper {
     position: absolute;
-    z-index: -2;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
